Fix druw.conf public dir path

--- a/druw-fullstack.yml
+++ b/druw-fullstack.yml
@@ -22,5 +22,5 @@
     - { role: postgresql, become: yes }
     - { role: tomcat }
     - { role: fedora }
-    - { role: solr }
+    - { role: solr, tags: ['solr'] }
     - { role: apache, tags: ['apache'] }
