--- a/druw-fullstack.yml
+++ b/druw-fullstack.yml
@@ -13,6 +13,16 @@
     - name: restart postgresql
       service: name=postgresql state=restarted
 
+  tasks:
+    - name: disable selinux
+      become: yes
+      replace: dest=/etc/selinux/config regexp='^SELINUX=enforcing' replace='SELINUX=disabled'
+      tags: selinux
+
+    #- name: restart selinux
+    #  become: yes
+    #  service: name=selinux state=restarted
+
   roles:
     - { role: fits, become: yes }
     - { role: druw }
@@ -21,6 +31,6 @@
     #- { role: ffmpeg, tags: ffmpeg }
     - { role: postgresql, become: yes }
     - { role: tomcat }
-    - { role: fedora }
+    - { role: fedora, tags: ['fedora'] }
     - { role: solr, tags: ['solr'] }
     - { role: apache, tags: ['apache'] }
