--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -45,6 +45,25 @@
   become: yes
   shell: passenger-install-apache2-module --snippet > /etc/httpd/conf.d/passenger.conf
 
+- name: run rake db:migrate here too.
+  command: "cd {{ druw_home }} && RAILS_ENV=production bundle exec rake db:migrate"
+
+- name: kludge local_rules import
+  replace:
+    dest: "{{ druw_home }}/app/assets/stylesheets/application.css"
+    regexp: 'local\_rules'
+    replace: '{{ druw_home }}/app/assets/stylesheets/local_rules.scss'
+
+- name: precompile assets
+  command: "cd {{ druw_home }} && RAILS_ENV=production bundle exec rake assets:precompile"
+
+- name: change owner to apache
+  become: yes
+  file:
+    path: "{{ druw_home }}"
+    recurse: yes
+    owner: apache
+
 - name: restart apache
   become: yes
   service: name=httpd state=restarted
