--- a/roles/druw_admin_prod/tasks/main.yml
+++ b/roles/druw_admin_prod/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
-  - name: Add hydra-role-managemnt gem to Gemfile
+  - name: Add hydra-role-management gem to Gemfile
     lineinfile: "dest={{ druw_home }}/Gemfile line=\"gem 'hydra-role-management'\""
+
+  - name: Add postgresql gem to Gemfile
+    lineinfile: "dest={{ druw_home }}/Gemfile line=\"gem 'pg'\""
 
   - name: Bundle install
     become: yes
