--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -13,18 +13,24 @@
   - name: start postgresql service
     service: name=postgresql state=started enabled=true
 
-  - name: replace pg_hba.conf
-    template: src=pg_hba.conf.j2 dest=/var/lib/pgsql/data/pg_hba.conf
-    notify: restart postgresql
+  #- name: replace pg_hba.conf
+  #  template: src=pg_hba.conf.j2 dest=/var/lib/pgsql/data/pg_hba.conf
+  #  notify: restart postgresql
 
   - name: Check that database is created
     become_user: postgres
-    postgresql_db: name={{ db_name }}
+    postgresql_db: name={{ db_name }} owner={{ db_user }}
 
-  - name: Check that user has access to database
+  - name: Create postgres db user
     become_user: postgres
-    postgresql_user: db={{ db_name }} name={{ db_user }} password={{ db_pwd }}
+    postgresql_user:
+      db: "{{ db_name }}" 
+      name: "{{ db_user }}"
+      password: "{{ db_pwd }}"
 
   - name: Check that user does not have unnecessary privilege
     become_user: postgres
     postgresql_user: name={{ db_user }} role_attr_flags=NOSUPERUSER,NOCREATEDB
+
+  - name: update druw's config/database.yml
+    template: src=database.yml.j2 dest={{ druw_home }}/config/database.yml
