--- a/roles/druw_admin_prod/tasks/main.yml
+++ b/roles/druw_admin_prod/tasks/main.yml
@@ -2,8 +2,18 @@
   - name: Add hydra-role-management gem to Gemfile
     lineinfile: "dest={{ druw_home }}/Gemfile line=\"gem 'hydra-role-management'\""
 
-  - name: Add postgresql gem to Gemfile
-    lineinfile: "dest={{ druw_home }}/Gemfile line=\"gem 'pg'\""
+  - name: Remove flipflop gem from main cache
+    become: yes
+    shell: "rm -rf /usr/lib64/ruby/gems/2.3.0/bundler/gems/{{ item }}-*"
+    with_items:
+      - flipflop
+      - sufia
+
+  - name: Remove flipflop gem from user cache
+    shell: "rm -rf /home/vagrant/.bundle/cache/git/{{ item }}-*"
+    with_items:
+      - flipflop
+      - sufia
 
   - name: Bundle install
     become: yes
@@ -38,11 +48,3 @@
       - "    if current_user.admin?"
       - "    # app/models/ability.rb"
         
-  #- name: Start solr
-  #  command: "bundle exec solr_wrapper -d solr/config/ --collection_name hydra-development & chdir={{ druw_home }}"
-
-  #- name: Start FCRepo
-  #  command: "bundle exec fcrepo_wrapper -p 8984 & chdir={{ druw_home }}"
-
-  #- name: Start rails webrick server
-  #  command: "rails server -b 0.0.0.0 chdir={{ druw_home }}"
