--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -10,21 +10,21 @@
   - name: Add postgresql gem to gemfile
     lineinfile: "dest={{ druw_home }}/Gemfile line=\"gem 'pg'\""
 
-  - name: Remove flipflop gem from main cache
-    become: yes
-    shell: "rm -rf /usr/lib64/ruby/gems/2.3.0/bundler/gems/{{ item }}-*"
-    with_items:
-      - flipflop
-      - sufia
+  #- name: Remove flipflop gem from main cache
+  #  become: yes
+  #  shell: "rm -rf /usr/lib64/ruby/gems/2.3.0/bundler/gems/{{ item }}-*"
+  #  with_items:
+  #    - flipflop
+  #    - sufia
                                             
-  - name: Remove flipflop gem from user cache 
-    shell: "rm -rf /home/vagrant/.bundle/cache/git/{{ item }}-*"
-    with_items:
-      - flipflop
-      - sufia
+  #- name: Remove flipflop gem from user cache 
+  #  shell: "rm -rf /home/vagrant/.bundle/cache/git/{{ item }}-*"
+  #  with_items:
+  #    - flipflop
+  #    - sufia
 
   - name: Install postgresql gem 
-    command: "cd {{ druw_home }} && bundle install"
+    command: "cd {{ druw_home }} && bundle update pg"
 
   - name: initdb
     action: shell creates=/var/lib/pgsql/data/postgresql.conf postgresql-setup initdb
