--- a/roles/druw_admin_prod/tasks/main.yml
+++ b/roles/druw_admin_prod/tasks/main.yml
@@ -2,22 +2,22 @@
   - name: Add hydra-role-management gem to Gemfile
     lineinfile: "dest={{ druw_home }}/Gemfile line=\"gem 'hydra-role-management'\""
 
-  - name: Remove flipflop gem from main cache
-    become: yes
-    shell: "rm -rf /usr/lib64/ruby/gems/2.3.0/bundler/gems/{{ item }}-*"
-    with_items:
-      - flipflop
-      - sufia
+  #- name: Remove flipflop gem from main cache
+  #  become: yes
+  #  shell: "rm -rf /usr/lib64/ruby/gems/2.3.0/bundler/gems/{{ item }}-*"
+  #  with_items:
+  #    - flipflop
+  #    - sufia
 
-  - name: Remove flipflop gem from user cache
-    shell: "rm -rf /home/vagrant/.bundle/cache/git/{{ item }}-*"
-    with_items:
-      - flipflop
-      - sufia
+  #- name: Remove flipflop gem from user cache
+  #  shell: "rm -rf /home/vagrant/.bundle/cache/git/{{ item }}-*"
+  #  with_items:
+  #    - flipflop
+  #    - sufia
 
   - name: Bundle install
     become: yes
-    command: "bundle install chdir={{ druw_home }}"
+    command: "bundle update hydra-role-management chdir={{ druw_home }}"
 
   - name: Check if admin users role has been created
     stat: path="{{ druw_home }}/db/migrate*_user_roles.rb"
