--- a/druw-fullstack.yml
+++ b/druw-fullstack.yml
@@ -9,10 +9,10 @@
   environment:
     SECRET_KEY_BASE: "{{ rails_secret }}"
 
-  handlers:
-    - name: restart postgresql
-      become: yes
-      service: name=postgresql state=restarted
+  #handlers:
+  #  - name: restart postgresql
+  #    become: yes
+  #    service: name=postgresql state=restarted
 
   tasks:
     - name: disable selinux
