--- a/vars.yml.template
+++ b/vars.yml.template
@@ -3,5 +3,7 @@ fits_version: 0.8.5
 install_path: /usr/local/bin
 ansible_target: localhost
 #ansible_target: demoserver
-rails_version: 4.2.7.1
+#rails_version: 4.2.7.1
+ruby_version: 2.4.1
+rails_version: 5.0.1
 config_path: "{{ druw_home }}/config" 
