--- a/druw.yml
+++ b/druw.yml
@@ -8,6 +8,6 @@
   roles:
     - { role: fits, become: yes }
     - { role: druw }
-    #- { role: druw_admin }
+    - { role: druw_admin }
     - { role: redis, become: yes }
     #- { role: ffmpeg, tags: ffmpeg }
