--- a/development.yml
+++ b/development.yml
@@ -7,7 +7,7 @@
 
   roles:
     - { role: fits, become: yes }
-    - { role: druw }
+    - { role: druw-dev }
     - { role: druw_admin }
     - { role: redis, become: yes }
     #- { role: ffmpeg, tags: ffmpeg }
