--- a/fullstack.yml
+++ b/fullstack.yml
@@ -6,19 +6,19 @@
     - vars.yml
     - private.yml
 
-  environment:
-    SECRET_KEY_BASE: "{{ rails_secret }}"
+  #environment:
+  #  SECRET_KEY_BASE: "{{ rails_secret }}"
 
   #handlers:
   #  - name: restart postgresql
   #    become: yes
   #    service: name=postgresql state=restarted
 
-  tasks:
-    - name: disable selinux
-      become: yes
-      replace: dest=/etc/selinux/config regexp='^SELINUX=enforcing' replace='SELINUX=disabled'
-      tags: selinux
+  #tasks:
+    #- name: disable selinux
+    #  become: yes
+    #  replace: dest=/etc/selinux/config regexp='^SELINUX=enforcing' replace='SELINUX=disabled'
+    #  tags: selinux
 
     #- name: restart selinux
     #  become: yes
@@ -26,12 +26,11 @@
 
   roles:
     - { role: fits, become: yes }
-    - { role: druw }
     - { role: postgresql, become: yes, tags: ['postgres'] }
-    - { role: druw_admin_prod }
+    - { role: druw-fullstack }
     - { role: redis, become: yes }
-    #- { role: ffmpeg, tags: ffmpeg }
     - { role: tomcat }
     - { role: fedora, tags: ['fedora'] }
     - { role: solr, tags: ['solr'] }
     - { role: apache, tags: ['apache'] }
+    #- { role: ffmpeg, tags: ffmpeg }
