--- a/roles/fits/tasks/main.yml
+++ b/roles/fits/tasks/main.yml
@@ -4,7 +4,7 @@
   package: name=unzip state=present
 
 - name: unpack fits
-  unarchive: src="http://projects.iq.harvard.edu/files/fits/files/fits-0.8.5.zip" dest="{{ install_path }}/" creates="{{ install_path }}/fits-{{ fits_version }}/fits.sh" copy=no
+  unarchive: src="http://projects.iq.harvard.edu/files/fits/files/fits-{{ fits_version }}.zip" dest="{{ install_path }}/" creates="{{ install_path }}/fits-{{ fits_version }}/fits.sh" copy=no
   #unarchive: src=roles/fits/files/fits-0.8.5.zip dest="{{ install_path }}/" creates="{{ install_path }}/fits-{{ fits_version }}/fits.sh" copy=no
   #unarchive: src=fits-0.8.5.zip dest="{{ install_path }}/" creates="{{ install_path }}/fits-{{ fits_version }}/fits.sh" copy=no
 
@@ -28,3 +28,6 @@
 
 - name: symlink fits-env.sh alias
   file: src="/usr/local/lib/fits-{{ fits_version }}/fits-env.sh" dest="/usr/bin/fits-env.sh" state=link
+
+- name: symlink fits-env.sh alias
+  file: src="/usr/local/lib/fits-{{ fits_version }}/fits-env.sh" dest="/usr/local/bin/fits-env.sh" state=link
