--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -35,11 +35,11 @@
     service: name=postgresql state=restarted
 
   - name: Add postgresql gem to gemfile
-    lineinfile: "dest={{ application_home }}/Gemfile line=\"gem 'pg'\""
+    lineinfile: "dest={{ application_home }}/Gemfile line=\"  gem 'pg'\""
 
   - name: Install postgresql gem 
     #shell: "cd {{ application_home }} && bundle install"
-    command: "bundle install chdir={{ application_home }}"
+    command: "bundle install --with production chdir={{ application_home }}"
 
   - name: update application's config/database.yml
     template: src=database.yml.j2 dest={{ application_home }}/config/database.yml
