--- a/roles/druw-fullstack/tasks/main.yml
+++ b/roles/druw-fullstack/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+  - name: khanh temp fix for missing http-parser for epel nodejs
+    yum: pkg=https://kickstart.lib.washington.edu/rpm_repo/druw/7/x86_64/http-parser-2.7.1-3.el7.x86_64.rpm state=present
+
   - name: Install hyrax dependencies
     become: yes
     yum: pkg={{ item }} state=latest
@@ -25,16 +28,16 @@
 
   - name: Bundle install
     #command: "bundle install --path vendor/bundle chdir={{ application_home }} creates={{ application_home }}/vendor/bundle"
-    command: "bundle install --without production chdir={{ application_home }}" 
+    command: "bundle install --path vendor/bundle --without production chdir={{ application_home }}" 
 
-  - name: devise.rb
-    become: yes
-    lineinfile:
-      #path: /var/hyrax/config/initializers/devise.rb'
-      dest: "{{ application_home }}/config/initializers/devise.rb"
-      regexp: '^  # config.secret_key'
-      line: "  config.secret_key = '{{ devise_secret }}'"
-      backrefs: yes
+  #- name: devise.rb
+  #  become: yes
+  #  lineinfile:
+  #    #path: /var/hyrax/config/initializers/devise.rb'
+  #    dest: "{{ application_home }}/config/initializers/devise.rb"
+  #    regexp: '^  # config.secret_key'
+  #    line: "  config.secret_key = '{{ devise_secret }}'"
+  #    backrefs: yes
 
   - name: Add default secret to secrets.yml
     become: yes
@@ -62,13 +65,13 @@
       chdir: "{{ application_home }}"
       removes: "{{ application_home }}/bin/spring"
 
-  - name: Generate admin role
-    command: "rails generate roles chdir={{ application_home }}"
-    args:
-      creates: "{{ application_home }}/db/migrate/*_user_roles.rb"
+  #- name: Generate admin role
+  #  command: "rails generate roles chdir={{ application_home }}"
+  #  args:
+  #    creates: "{{ application_home }}/db/migrate/*_user_roles.rb"
 
   - name: Rake db
-    command: "bundle exec rails db:migrate chdir={{ application_home }}"
+    command: "rails db:migrate chdir={{ application_home }}"
 
   - name: Do a bad thing
     command: setenforce 0
